--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>AgroMinimarket</title>
   </head>
-  <body>
+  <body style="background:linear-gradient(#ffab91, #f9683a)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
